수강편람 업데이트

--- a/data/htm/2012_S_basics_foreign.htm
+++ b/data/htm/2012_S_basics_foreign.htm
@@ -794,9 +794,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">김광일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -807,9 +807,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">김광일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -820,9 +820,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">김광일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1028,35 +1028,35 @@
 <td class="pstyle2">초급중국어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;1-1.5,1,2,3,1-1.5&nbsp;</td>
-<td class="pstyle2">실험반2&nbsp;</td>
-<td class="pstyle2">001-204&nbsp;</td>
-<td class="pstyle2">서용준&nbsp;</td>
-<td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.017B&nbsp;</td>
-<td class="pstyle2">002&nbsp;</td>
-<td class="pstyle2">초급중국어 1&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;1-1.5,1,2,3,1-1.5&nbsp;</td>
-<td class="pstyle2">실험반2&nbsp;</td>
-<td class="pstyle2">001-204&nbsp;</td>
-<td class="pstyle2">서용준&nbsp;</td>
-<td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.017B&nbsp;</td>
-<td class="pstyle2">002&nbsp;</td>
-<td class="pstyle2">초급중국어 1&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6,1-1.5,1-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-104-1&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">서용준&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.017B&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">초급중국어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6,1-1.5,1-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">서용준&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.017B&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">초급중국어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
 <td class="pstyle2">서용준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1499,7 +1499,7 @@
 <td class="pstyle2">월&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정동희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1512,7 +1512,7 @@
 <td class="pstyle2">수&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정동희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1525,7 +1525,7 @@
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정동희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2357,7 +2357,7 @@
 <td class="pstyle2">월&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">정동희&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2370,7 +2370,7 @@
 <td class="pstyle2">수&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">정동희&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2383,7 +2383,7 @@
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">정동희&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 
