--- a/data/htm/2012_S_basics_science.htm
+++ b/data/htm/2012_S_basics_science.htm
@@ -602,7 +602,7 @@
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수봉&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -615,7 +615,7 @@
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수봉&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -628,7 +628,7 @@
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수봉&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -641,7 +641,7 @@
 <td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박제근&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -654,7 +654,7 @@
 <td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박제근&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -667,7 +667,7 @@
 <td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박제근&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -677,10 +677,36 @@
 <td class="pstyle2">물리학 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">김정구&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">김정구&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">김정구&nbsp;</td>
 <td class="pstyle2">170&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -690,10 +716,36 @@
 <td class="pstyle2">물리학 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">제원호&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">제원호&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">제원호&nbsp;</td>
 <td class="pstyle2">170&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
