--- a/data/htm/2012_S_basics_all.htm
+++ b/data/htm/2012_S_basics_all.htm
@@ -1574,9 +1574,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">김광일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1587,9 +1587,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">김광일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1600,9 +1600,9 @@
 <td class="pstyle2">한문 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">001-103&nbsp;</td>
 <td class="pstyle2">김광일&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1808,35 +1808,35 @@
 <td class="pstyle2">초급중국어 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">월&nbsp;1-1.5,1,2,3,1-1.5&nbsp;</td>
-<td class="pstyle2">실험반2&nbsp;</td>
-<td class="pstyle2">001-204&nbsp;</td>
-<td class="pstyle2">서용준&nbsp;</td>
-<td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.017B&nbsp;</td>
-<td class="pstyle2">002&nbsp;</td>
-<td class="pstyle2">초급중국어 1&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">수&nbsp;1-1.5,1,2,3,1-1.5&nbsp;</td>
-<td class="pstyle2">실험반2&nbsp;</td>
-<td class="pstyle2">001-204&nbsp;</td>
-<td class="pstyle2">서용준&nbsp;</td>
-<td class="pstyle2">30&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td></tr>
-<tr>
-<td class="pstyle2">1학년&nbsp;</td>
-<td class="pstyle2">010.017B&nbsp;</td>
-<td class="pstyle2">002&nbsp;</td>
-<td class="pstyle2">초급중국어 1&nbsp;</td>
-<td class="pstyle2">교양&nbsp;</td>
-<td class="pstyle2">3-3-1&nbsp;</td>
-<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6,1-1.5,1-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-104-1&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">서용준&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.017B&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">초급중국어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6,1-1.5,1-1.5&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
+<td class="pstyle2">서용준&nbsp;</td>
+<td class="pstyle2">30&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.017B&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">초급중국어 1&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-1&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">001-101&nbsp;</td>
 <td class="pstyle2">서용준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -2279,7 +2279,7 @@
 <td class="pstyle2">월&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정동희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2292,7 +2292,7 @@
 <td class="pstyle2">수&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정동희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2305,7 +2305,7 @@
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-104&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">정동희&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3800,7 +3800,7 @@
 <td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수봉&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3813,7 +3813,7 @@
 <td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수봉&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3826,7 +3826,7 @@
 <td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">김수봉&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3839,7 +3839,7 @@
 <td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박제근&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3852,7 +3852,7 @@
 <td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박제근&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3865,7 +3865,7 @@
 <td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">026-108&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">박제근&nbsp;</td>
 <td class="pstyle2">210&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3875,10 +3875,36 @@
 <td class="pstyle2">물리학 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">김정구&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">김정구&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">001&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;1,2,3&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">김정구&nbsp;</td>
 <td class="pstyle2">170&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -3888,10 +3914,36 @@
 <td class="pstyle2">물리학 2&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;&nbsp;&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
-<td class="pstyle2">-&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">월&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">제원호&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">수&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">제원호&nbsp;</td>
+<td class="pstyle2">170&nbsp;</td>
+<td class="pstyle2">&nbsp;&nbsp;</td></tr>
+<tr>
+<td class="pstyle2">1학년&nbsp;</td>
+<td class="pstyle2">010.113&nbsp;</td>
+<td class="pstyle2">002&nbsp;</td>
+<td class="pstyle2">물리학 2&nbsp;</td>
+<td class="pstyle2">교양&nbsp;</td>
+<td class="pstyle2">3-3-0&nbsp;</td>
+<td class="pstyle2">금&nbsp;4,5,6&nbsp;</td>
+<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">제원호&nbsp;</td>
 <td class="pstyle2">170&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4099,7 +4151,7 @@
 <td class="pstyle2">월&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">정동희&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4112,7 +4164,7 @@
 <td class="pstyle2">수&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">정동희&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4125,7 +4177,7 @@
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">정동희&nbsp;</td>
+<td class="pstyle2">임호준&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
