--- a/timetable.htm
+++ b/timetable.htm
@@ -3,6 +3,10 @@
 	<head> 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+		<meta name="og:title" content="서울대학교 시간표 SNUTT" />
+		<meta name="og:type" content="timetable" />
+		<meta name="og:site_name" content="SNUTT" />
+		<meta name="og:description" content="서울대학교 시간표 작성 웹서비스!" />
 		<title>SNUTT - 2012 여름학기</title> 
 		<link href="/stylesheets/timetable.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/timetable.mobile.css" media="handheld, only screen and (max-device-width: 768px)" type="text/css" rel="stylesheet" />
