수강편람 업데이트

--- a/data/htm/2012_S_basics_all.htm
+++ b/data/htm/2012_S_basics_all.htm
@@ -3446,8 +3446,8 @@
 <td class="pstyle2">수학 및 연습 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;3,4,5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">월&nbsp;5,6,3,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
@@ -3459,8 +3459,8 @@
 <td class="pstyle2">수학 및 연습 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;3,4,5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">수&nbsp;5,6,3,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
@@ -3472,8 +3472,8 @@
 <td class="pstyle2">수학 및 연습 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;3,4,5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6,3,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
@@ -4151,7 +4151,7 @@
 <td class="pstyle2">월&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">정인태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4164,7 +4164,7 @@
 <td class="pstyle2">수&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">정인태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -4177,7 +4177,7 @@
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">정인태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
