--- a/data/htm/2012_S_basics_science.htm
+++ b/data/htm/2012_S_basics_science.htm
@@ -248,8 +248,8 @@
 <td class="pstyle2">수학 및 연습 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">월&nbsp;3,4,5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">월&nbsp;5,6,3,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
@@ -261,8 +261,8 @@
 <td class="pstyle2">수학 및 연습 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">수&nbsp;3,4,5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">수&nbsp;5,6,3,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
@@ -274,8 +274,8 @@
 <td class="pstyle2">수학 및 연습 1&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-2-2&nbsp;</td>
-<td class="pstyle2">금&nbsp;3,4,5,6&nbsp;</td>
-<td class="pstyle2">이론&nbsp;</td>
+<td class="pstyle2">금&nbsp;5,6,3,4&nbsp;</td>
+<td class="pstyle2">실험반1&nbsp;</td>
 <td class="pstyle2">500-L301&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
