--- a/data/htm/2012_S_basics_foreign.htm
+++ b/data/htm/2012_S_basics_foreign.htm
@@ -2357,7 +2357,7 @@
 <td class="pstyle2">월&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">정인태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2370,7 +2370,7 @@
 <td class="pstyle2">수&nbsp;7,8,9,5.5-1.5,5.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">정인태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -2383,7 +2383,7 @@
 <td class="pstyle2">금&nbsp;7,8,9&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">003-107&nbsp;</td>
-<td class="pstyle2">임호준&nbsp;</td>
+<td class="pstyle2">정인태&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 
