수강편람 업데이트(2012-1)

--- a/data/htm/2012_1_basics_korean.htm
+++ b/data/htm/2012_1_basics_korean.htm
@@ -1486,7 +1486,7 @@
 <td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이영호&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1499,7 +1499,7 @@
 <td class="pstyle2">목&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이영호&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
