--- a/data/htm/2012_1_basics_all.htm
+++ b/data/htm/2012_1_basics_all.htm
@@ -1486,7 +1486,7 @@
 <td class="pstyle2">화&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이영호&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -1499,7 +1499,7 @@
 <td class="pstyle2">목&nbsp;7.5,8.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">001-209&nbsp;</td>
-<td class="pstyle2">&nbsp;&nbsp;</td>
+<td class="pstyle2">이영호&nbsp;</td>
 <td class="pstyle2">30&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
 <tr>
@@ -10234,7 +10234,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">월&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">025-110&nbsp;</td>
 <td class="pstyle2">문명인&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -10260,7 +10260,7 @@
 <td class="pstyle2">3-2-2&nbsp;</td>
 <td class="pstyle2">수&nbsp;1&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">024-102&nbsp;</td>
+<td class="pstyle2">025-110&nbsp;</td>
 <td class="pstyle2">문명인&nbsp;</td>
 <td class="pstyle2">50&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
