--- a/timetable_header.htm
+++ b/timetable_header.htm
@@ -7,7 +7,7 @@
 		<meta name="og:type" content="timetable" />
 		<meta name="og:site_name" content="SNUTT" />
 		<meta name="og:description" content="서울대학교 시간표 작성 웹서비스!" />
-		<title>SNUTT - 2012 여름학기</title> 
+		<title>서울대학교 시간표</title> 
 		<link href="/stylesheets/timetable.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/timetable.mobile.css" media="handheld, only screen and (max-device-width: 768px)" type="text/css" rel="stylesheet" />
 		<link href="/stylesheets/timetable.mobile.480.css" media="handheld, only screen and (max-device-width: 480px)" type="text/css" rel="stylesheet" />
