--- a/timetable_header.htm
+++ b/timetable_header.htm
@@ -17,6 +17,7 @@
 		<link href="/stylesheets/bootstrap.min.css" media="all" rel="stylesheet" type="text/css" /> 
 		<link href="/stylesheets/bootstrap-responsive.min.css" media="all" rel="stylesheet" type="text/css" /> 
 		<script src="/javascripts/jquery.js" type="text/javascript"></script> 
+		<script src="/javascripts/jquery.waitForImages.js" type="text/javascript"></script> 
 		<script src="/javascripts/jquery-ui-1.8.17.custom.min.js" type="text/javascript"></script> 
 		<script src="/javascripts/jquery.jrating.js" type="text/javascript"></script> 
 
