--- a/timetable_header.htm
+++ b/timetable_header.htm
@@ -19,6 +19,7 @@
 		<script src="/javascripts/jquery.js" type="text/javascript"></script> 
 		<script src="/javascripts/jquery-ui-1.8.17.custom.min.js" type="text/javascript"></script> 
 		<script src="/javascripts/jquery.jrating.js" type="text/javascript"></script> 
+		<script src="/javascripts/jquery.touch-punch.js" type="text/javascript"></script> 
 
 		<script src="/javascripts/utils.js" type="text/javascript"></script> 
 		<script src="/socket.io/socket.io.js" type="text/javascript"></script> 
