강의 상세정보 접기/펼치기

--- a/timetable_footer.htm
+++ b/timetable_footer.htm
@@ -28,7 +28,11 @@
 		<!-- facebook test end -->
 
 		<div id="course_detail_wrapper">
-			<h3 class="course-title"></h3>
+			<div class="course-title">
+				<h3 id="course_detail_title"></h3>
+				<div id="course_detail_contract" class="course_detail_toggle"></div>
+				<div id="course_detail_expand" style="display:none;" class="course_detail_toggle"></div>
+			</div>
 			<div id="course_detail">
 				<table id="course_detail_table">
 					<tr>
