--- a/user_timetable_header.htm
+++ b/user_timetable_header.htm
@@ -10,6 +10,7 @@
 		<title>SNUTT</title> 
 
 		<link href="/stylesheets/user_timetable.css" media="all" rel="stylesheet" type="text/css" /> 
+		<link href="/stylesheets/user_timetable.mobile.css" media="handheld, only screen and (max-device-width: 640px)" type="text/css" rel="stylesheet" />
 		<script src="/javascripts/jquery.js" type="text/javascript"></script> 
 		<script src="/javascripts/user_timetable.js" type="text/javascript"></script> 
 		<script type="text/javascript">
