course detail 초기 상태 display:none;으로

--- a/timetable_footer.htm
+++ b/timetable_footer.htm
@@ -27,7 +27,7 @@
     </script>
 		<!-- facebook test end -->
 
-		<div id="course_detail_wrapper">
+		<div id="course_detail_wrapper" style="display:none;">
 			<div class="course-title">
 				<h3 id="course_detail_title"></h3>
 				<div id="course_detail_contract" class="course_detail_toggle"></div>
