SNUEV 강의평점 데이터 적용

--- a/timetable_footer.htm
+++ b/timetable_footer.htm
@@ -86,7 +86,11 @@
 					<tr>
 						<th>강의평점</th>
 						<td>
-							<div id="course_detail_rating">
+							<div id="course_detail_rating_wrapper">
+								<div id="course_detail_rating">
+								</div>
+								<div id="course_detail_rating_score">
+								</div>
 							</div>
 						</td>
 					</tr>
