수강편람 업데이트(2012-2)

--- a/data/htm/2012_2_basics_foreign.htm
+++ b/data/htm/2012_2_basics_foreign.htm
@@ -1381,7 +1381,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1394,7 +1394,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">15&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1901,7 +1901,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-102&nbsp;</td>
+<td class="pstyle2">003-116&nbsp;</td>
 <td class="pstyle2">김현진&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -1914,7 +1914,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-102&nbsp;</td>
+<td class="pstyle2">003-116&nbsp;</td>
 <td class="pstyle2">김현진&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -5435,9 +5435,9 @@
 <td class="pstyle2">대학영어 2: 말하기&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-3-0&nbsp;</td>
-<td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-101&nbsp;</td>
+<td class="pstyle2">005-107-2&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -5448,9 +5448,9 @@
 <td class="pstyle2">대학영어 2: 말하기&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">2-3-0&nbsp;</td>
-<td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">002-101&nbsp;</td>
+<td class="pstyle2">005-107-2&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -5515,7 +5515,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-2&nbsp;</td>
+<td class="pstyle2">002-101&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -5528,7 +5528,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;7.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-107-2&nbsp;</td>
+<td class="pstyle2">002-101&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -5697,7 +5697,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">월&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -5710,7 +5710,7 @@
 <td class="pstyle2">2-3-0&nbsp;</td>
 <td class="pstyle2">수&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">003-116&nbsp;</td>
+<td class="pstyle2">002-102&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td>
 <td class="pstyle2">20&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
