--- a/data/htm/2012_2_core_history.htm
+++ b/data/htm/2012_2_core_history.htm
@@ -235,7 +235,7 @@
 <td class="pstyle2">서양철학의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">월&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-102&nbsp;</td>
 <td class="pstyle2">이석재&nbsp;</td>
@@ -248,7 +248,7 @@
 <td class="pstyle2">서양철학의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
+<td class="pstyle2">수&nbsp;4.5-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
 <td class="pstyle2">007-102&nbsp;</td>
 <td class="pstyle2">이석재&nbsp;</td>
@@ -287,9 +287,9 @@
 <td class="pstyle2">동양철학의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">화&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">화&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-212&nbsp;</td>
+<td class="pstyle2">007-102&nbsp;</td>
 <td class="pstyle2">안성두&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
@@ -300,9 +300,9 @@
 <td class="pstyle2">동양철학의 이해&nbsp;</td>
 <td class="pstyle2">교양&nbsp;</td>
 <td class="pstyle2">3-3-0&nbsp;</td>
-<td class="pstyle2">목&nbsp;4.5-1.5&nbsp;</td>
+<td class="pstyle2">목&nbsp;6-1.5&nbsp;</td>
 <td class="pstyle2">이론&nbsp;</td>
-<td class="pstyle2">005-212&nbsp;</td>
+<td class="pstyle2">007-102&nbsp;</td>
 <td class="pstyle2">안성두&nbsp;</td>
 <td class="pstyle2">60&nbsp;</td>
 <td class="pstyle2">&nbsp;&nbsp;</td></tr>
